TB-2008-11-20-0: Bugfix:     o some calling code of the wait_for_XXX hedeby
                               functions relied on their silent initialization
                               of the error_text variable
                 Belongs to: TB-2008-11-19-0
                 Cleanup:    Used sdmadm_command_opt in:
                             o util/produce_inprocess_resource()
                             o util/produce_ambiguous_resource()
                             o util/produce_unassigning_resource()
                             o util/reset_produced_inprocess_resource()
                             o util/reset_produced_ambiguous_resource()
                             o util/reset_produced_unassigning_resource()
                             o util/hedeby_executor_cleanup()
                 Review:     CR

JG-2008-11-20-0: Enhancem.:  - installation: call setfileperm.sh on fileserver
                             - cleanup of installation modules
                 Review:     CR

EB-2008-11-20-0: Enhancem.:  - integrated perl script into jsv_script test
                             - fixed wrong job parameter name
                 Review:     MD

CR-2008-11-19-1: Bugfix:     - new test param: "check_need_running_system"
                             - setup/cleanup() procedures now influence the
                               test result when reporting an error
                             - cleanup of testsuite output
                             - when setup function fails the test is skipped
                             - minor framework code cleanup
                             - user abort now results in failed test
                             - added note for no_update help output
                             - open_remote_spawn_process(): new opt. param.:
                               disable_stty_echo
                             - ts_log_newline(): printed out two newlines
                             - log mail now contains information about